[package]
name = "json2file"
authors = ["Tonye Jack <jtonye@ymail.com>"]
version = "1.7.6"
description = "Generate file output from JSON"
repository = "https://github.com/tj-actions/json2file"
homepage = "https://github.com/tj-actions/json2file"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde_json = "1.0.108"
clap = { version = "4.4.12", features = ["derive"] }
unescaper = "0.1.3"
csv = "1.3.0"
