[package]
name = "json2file"
authors = ["Tonye Jack <jtonye@ymail.com>"]
version = "1.7.8"
description = "Generate file output from JSON"
repository = "https://github.com/tj-actions/json2file"
homepage = "https://github.com/tj-actions/json2file"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
serde_json = "1.0.114"
clap = { version = "4.5.3", features = ["derive"] }
unescaper = "0.1.4"
csv = "1.3.0"
